[wcag] Fix contrast level on citation badges

--- a/ckanext/nhm/theme/less/nhm.less
+++ b/ckanext/nhm/theme/less/nhm.less
@@ -2504,7 +2504,7 @@ select, .select2-choice {
   }
 
   .citation-badge {
-    background-color: @primary4;
+    background-color: @primary3;
     border-radius: 4px;
   }
 
